# Copyright 2025 The gRPC Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_python//python:defs.bzl", "py_binary")
load("//bazel:python_rules.bzl", "py_grpc_library", "py_proto_library")

proto_library(
    name = "helloworld_proto",
    srcs = ["helloworld.proto"],
)

py_proto_library(
    name = "helloworld_proto_pb2",
    deps = [":helloworld_proto"],
)

py_grpc_library(
    name = "helloworld_proto_pb2_grpc",
    srcs = [":helloworld_proto"],
    deps = [":helloworld_proto_pb2"],
)

py_binary(
    name = "server",
    srcs = ["server.py"],
    data = ["helloworld.proto"],
    imports = ["."],
    python_version = "PY3",
    deps = [
        ":helloworld_proto_pb2",
        ":helloworld_proto_pb2_grpc",
        "//src/python/grpcio/grpc:grpcio",
        "//tools/distrib/python/grpcio_tools:grpc_tools",
    ],
)

py_binary(
    name = "client",
    srcs = ["client.py"],
    data = ["helloworld.proto"],
    imports = ["."],
    python_version = "PY3",
    deps = [
        ":helloworld_proto_pb2",
        ":helloworld_proto_pb2_grpc",
        "//src/python/grpcio/grpc:grpcio",
        "//tools/distrib/python/grpcio_tools:grpc_tools",
    ],
)
